# ai-sdlc-oz

./: .aisdlc  .coderabbit.yaml  .gitignore  .pyrightconfig.json  CHANGELOG.md  INSTALLATION.md  README.md  RELEASE_NOTES.md  pyproject.toml  repomix-output.txt
.coderabbit/ast-rules/: async-best-practices.yml  no-hardcoded-secrets.yml  require-error-handling.yml
.cursor/rules/: ai_sdlc.md  ai_sdlc.mdc
.github/: PYPI_SETUP.md
.github/workflows/: ci.yml  dependency-update.yml  docs.yml  release.yml  security.yml
ai_sdlc/: __init__.py  cli.py  config_validator.py  library_mappings.py  types.py  utils.py
ai_sdlc/commands/: context.py  done.py  init.py  new.py  next.py  status.py
ai_sdlc/scaffold_template/: .aisdlc
ai_sdlc/scaffold_template/prompts/: 01-prd.prompt.yml  02-prd-plus.prompt.yml  03-system-template.prompt.yml  05-tasks.prompt.yml  06-tasks-plus.prompt.yml
ai_sdlc/services/: __init__.py  ai_service.py  context7_client.py  context7_service.py
docs/: CONTEXT7_INTEGRATION.md  ai_contextual_processing_logic.md  contextual_chat_feature.md  markdown_chat_syntax.md
doing/hello-world-test/: 01-idea-hello-world-test.md  tasks.md
doing/test/: tasks.md
examples/: architecture_with_qa_example.md  prd_with_chat_example.md
prompts/: 01-idea-prompt.md  3-system-template.prompt.yml  4-systems-patterns.prompt.yml  5-tasks.prompt.yml  7-tests.prompt.yml
tests/: conftest.py
tests/integration/: test_cli_flow.py  test_context_command.py  test_end_to_end.py
tests/unit/: test_100_coverage.py  test_ai_service.py  test_cli.py  test_cli_coverage.py  test_config_validator.py  test_context7_client.py  test_context7_client_extended.py  test_context7_final_coverage.py  test_context7_service.py  test_context7_service_extended.py  test_context_coverage.py  test_done_command.py  test_final_coverage.py  test_init_command.py  test_init_coverage.py  test_new_command.py  test_next_command.py  test_status_command.py  test_utils.py  test_utils_coverage.py
