# ────────────────────────────────────────────────────────────────
#   pyproject.toml  –  ai-sdlc
# ────────────────────────────────────────────────────────────────

[build-system]
requires      = ["setuptools>=68.0", "wheel"]          # modern setuptools
build-backend = "setuptools.build_meta"

# ────────────────────────────────────────────────────────────────
[project]
name            = "ai-sdlc"
version         = "0.1.0"
description     = "Markdown-driven SDLC with Cursor agent chaining."
readme          = "README.md"
authors         = [{ name = "Parker Rex" }]
license         = { text = "MIT" }
requires-python = ">=3.13.0"              # ⬅ Python 3.13

[project.scripts]
aisdlc = "ai_sdlc.cli:main"

# ────────────────────────────────────────────────────────────────
#  Packaging tweaks
# ────────────────────────────────────────────────────────────────
[tool.setuptools]
packages = ["ai_sdlc"]                    # only ship the main package

[tool.setuptools.package-data]
"ai_sdlc" = [
    "templates/*",
    "prompts/*",
    ".aisdlc"
]

# ────────────────────────────────────────────────────────────────
#  uv configuration
# ────────────────────────────────────────────────────────────────
[tool.uv]
virtualenvs.in-project = true   # create .venv in repo root
sync.subprocesses      = true   # allow post-install hooks
